@@ -332,4 +332,4 @@
   - bugfix:  deleted FS20 items are still logging (zombie) (Gerhard, 16.5)
   - bugfix:  added FS20S8, removed stty_parmrk (Martin, 24.5)
   - feature: added archivedir/archivecmd to the FileLog
-  - feature: added EM1010PC/EM1000WZ support
+  - feature: added EM1010PC/EM1000WZ/EM1000EM support
